tests/snapshots/parse_file__imp_program.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/parse_file/imp_program.bend
---
Maybe/unwrap: ((Maybe T) -> T)
(Maybe/unwrap m) = match m = m { Maybe/Some: m.val; Maybe/None: unreachable; }

Map/empty: (Map T)
(Map/empty) = Map/Leaf

Map/get: ((Map T) -> u24 -> (T, (Map T)))
(Map/get map key) = match map = map { Map/Node: switch %pred = (== 0 key) { 0: switch %pred = (== (% key 2) 0) { 0: let (got, rest) = (Map/get map.right (/ key 2)); (got, (Map/Node map.value rest map.left)); _ %pred-1: let (got, rest) = (Map/get map.left (/ key 2)); (got, (Map/Node map.value rest map.right)); }; _ %pred-1: ((Maybe/unwrap map.value), map); }; Map/Leaf: (unreachable, map); }

Map/set: ((Map T) -> u24 -> T -> (Map T))
(Map/set map key value) = match map = map { Map/Node: switch %pred = (== 0 key) { 0: switch %pred = (== (% key 2) 0) { 0: (Map/Node map.value map.left (Map/set map.right (/ key 2) value)); _ %pred-1: (Map/Node map.value (Map/set map.left (/ key 2) value) map.right); }; _ %pred-1: (Map/Node (Maybe/Some value) map.left map.right); }; Map/Leaf: switch %pred = (== 0 key) { 0: switch %pred = (== (% key 2) 0) { 0: (Map/Node Maybe/None Map/Leaf (Map/set Map/Leaf (/ key 2) value)); _ %pred-1: (Map/Node Maybe/None (Map/set Map/Leaf (/ key 2) value) Map/Leaf); }; _ %pred-1: (Map/Node (Maybe/Some value) Map/Leaf Map/Leaf); }; }

unreachable: Any
(unreachable) = *

unchecked symbols: Any
(symbols) = let x = (Map/set (Map/set Map/empty 49 5) 2 3); let x = (Map/set x 49 2); let x = (Map/set x 2 3); let (map/get%0, x) = (Map/get x 49); (+ map/get%0 8293490)

unchecked mk_point: Any
(mk_point) = (Point/Point 1 2)

unchecked identity: (Any -> Any)
(identity x) = x

unchecked inc: (Any -> Any)
(inc n) = let n = (+ n 1); n

unchecked inc_list: (Any -> Any)
(inc_list list) = fold %iter = list { List/Nil: List/Nil; List/Cons: let x = %iter.head; (List/Cons (+ x 1) %iter.tail); }

unchecked lam: Any
(lam) = λx λy x

unchecked do_match: (Any -> Any)
(do_match b) = match b = b { Bool/True: 1; Bool/False: 0; }

unchecked true: Any
(true) = Bool/True

unchecked fib: (Any -> Any)
(fib n) = switch %pred = (< n 2) { 0: (+ (fib (- n 1)) (fib (- n 2))); _ %pred-1: n; }

unchecked swt: (Any -> Any)
(swt n) = switch n = n { 0: 42; _ n-1: 1; }

unchecked fld: (Any -> Any)
(fld list) = fold list = list { List/Cons: 1; List/Nil: 2; }

unchecked bnd: Any
(bnd) = bend x = 0, { when (< x 10): (List/Cons x (fork (+ x 1))); else: List/Nil }

unchecked era: Any
(era) = let * = (+ 2 3); let the_expr_killer = *; (the_expr_killer 9)

unchecked sup: Any
(sup) = let x = {(List/Cons 1 (List/Cons 2 List/Nil)) (List/Cons 3 (List/Cons 4 (List/Cons 5 (List/Cons 6 List/Nil))))}; x

unchecked main: Any
(main) = with IO { ask x = IO.read; x }

List/Nil/tag: _
(List/Nil/tag) = 0

List/Nil: (List T)
(List/Nil) = λ%x (%x List/Nil/tag)

List/Cons/tag: _
(List/Cons/tag) = 1

List/Cons: (T -> (List T) -> (List T))
(List/Cons) = λhead λtail λ%x (%x List/Cons/tag head tail)

Maybe/Some/tag: _
(Maybe/Some/tag) = 0

Maybe/Some: (T -> (Maybe T))
(Maybe/Some) = λval λ%x (%x Maybe/Some/tag val)

Maybe/None/tag: _
(Maybe/None/tag) = 1

Maybe/None: (Maybe T)
(Maybe/None) = λ%x (%x Maybe/None/tag)

Map/Node/tag: _
(Map/Node/tag) = 0

Map/Node: ((Maybe T) -> (Map T) -> (Map T) -> (Map T))
(Map/Node) = λvalue λleft λright λ%x (%x Map/Node/tag value left right)

Map/Leaf/tag: _
(Map/Leaf/tag) = 1

Map/Leaf: (Map T)
(Map/Leaf) = λ%x (%x Map/Leaf/tag)

Point/Point/tag: _
(Point/Point/tag) = 0

Point/Point: (Any -> Any -> Point)
(Point/Point) = λx λy λ%x (%x Point/Point/tag x y)
