tests/snapshots/parse_file__strange_pattern.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/parse_file/strange_pattern.bend
---
[4m[1m[31mErrors:[0m
[1mIn [4mtests/golden_tests/parse_file/strange_pattern.bend[0m[1m :[0m
[1m- expected:[0m pattern or '='
[1m- detected:[0m
[0m  1 | main [4m[31m& [0m= (a b c)[0m
